 - engine does not use StartUnit tag in sidedata.lua anymore (but still passes it to Spring.GetSideData)
 - engine does not read `Script' map tag anymore
 - engine does not read `ScriptName' modoption anymore
 - engine does not deal with `StartMetal' and `StartEnergy' modoptions anymore
 - pathfinder debugging views can be rendered now when spectating (and not cheating)
 - tdf format not supported anymore for modinfo
 - clients now compare their path-cache CRCs and warn about differences instead of updating their running checksums with them
 - Spring's CPU affinity can now also be set on non-win32 platforms, use the SetCoreAffinity ~/.springrc parameter as a bitmask

Engine / Simulation:
 - new unit tag: cloakTimeout, int, default 128 frames
 - fixed the featureVisibility mod-option
 - fixed calls to the engine path-finder to be sync-safe when run in unsynced context
 - reduced frequency of units ending up in "can't reach destination" situations
 - fixed units not inheriting orders from factories and piling up (due to having their paths aborted)
 - removed the TEDclassString UnitDef parameter (side-effect: hub-like units will break if they have a yardmap)
 - changed the semantics of the holdSteady UnitDef tag
      true ==> slave transportees to orientation of transporter attachment piece
      false ==> slave transportees to orientation of transporter body (default)

Engine / Rendering:
 - fixed alpha-masked shadows for S3O models
 - fixed far-textures (caused changing teamcolors and disappearing units)
 - support the OBJ model format (springrts.com/phpbb/viewtopic.php?f=9&t=22635)
 - support specular lighting, multiple blendable detail textures, and sky reflections on SMF maps ("SSMF")
     springrts.com/phpbb/viewtopic.php?f=13&t=21951
     springrts.com/phpbb/viewtopic.php?f=13&t=22564 (slightly outdated wrt. the SMD parameters)
 - converted all shadow, tree, grass, model, and map shaders to GLSL